Fix weird flicker!

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -701,7 +701,6 @@ object, embed, video, iframe {
                             float: right;
                             margin-left: 10px;
                             margin-right: 5px;
-                            opacity: 1;
                         }
 
                         span.collapsed-time {
